--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>Advanced Physics Tutor</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/quizzes.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/tutorials.css') }}">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -20,7 +21,6 @@
                 <li><a href="{{ url_for('tutorials') }}">Tutorials</a></li>
                 <li><a href="{{ url_for('quizzes') }}">Quizzes</a></li>
                 <li><a href="{{ url_for('contact') }}">Contact</a></li>
-                <li><a href="{{ url_for('login') }}">Login</a></li>
             </ul>
         </nav>
     </header>
