--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('tutorials') }}">Tutorials</a></li>
+                <li><a href="{{ url_for('ask') }}">Ask & Learn </a></li>
                 <li><a href="{{ url_for('quizzes') }}">Quizzes</a></li>
                 <li><a href="{{ url_for('contact') }}">Contact</a></li>
             </ul>
